--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <!--  -->
   <!-- NavBar -->
   <nav
-    class="bg-white px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 border-b border-b-gray-200">
+    class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
+    id="navbar">
     <div class="max-w-1/3">
-      <a href="./index.html">
+      <a href="#">
         <img src="img/logo-new.png" class="w-[250px]" alt="">
       </a>
     </div>
-    <div class="hidden container  font-regular flex-row items-center  justify-center space-x-10 md:flex max-w-1/3">
-      <a href="#" class="link  ">About</a>
-      <a href="./about.html" class="link  ">Resource</a>
-      <a href="#" class="link  ">For Student</a>
+    <div class="hidden container ml-36   flex-row items-center  justify-center space-x-8   md:flex max-w-1/3">
+      <a href="./pages/about.html" class="link ">About</a>
+      <a href="#" class="link  ">Resource</a>
+      <a href="./pages/contact.html" class="link  ">Contact</a>
       <a href="./pages/faq.html" class="link  ">FAQ</a>
-      <!-- <a href="#" class="hover:font-semibold ">Network</a> -->
     </div>
     <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
       <span class="hamburger-top"></span>
@@ -54,33 +54,46 @@
     <div class="max-w-1/3  hidden items-center justify-end pr-4  font-semibold button-effect space-x-4 md:flex">
       <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
       <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-md  text-white hover:bg-blue-400 bg-lightBlue  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
-        Apply Now
+        class="cursor-pointer border-textBlue border flex  justify-center items-center font-medium rounded-md   hover:bg-accent text-textBlue  text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm ">
+        Apply 
       </button>
       <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-md  border border-gray-500 hover:bg-medBlue hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
-        Become a partner
+        class="cursor-pointer flex  justify-center items-center font-medium rounded-md  border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
+        Become a ambassador
       </button>
     </div>
   </nav>
   <!-- Intro Section -->
-  <section id="intro" class="flex flex-row items-center h-[100vh] ">
-    <div class="w-1/2">
-      <div class="container pt-22  leading-tight max-w-2xl ml-24  text-lightBlue  text-5xl font-body font-black"
-        id="intro-text">
-        Your one-stop platform<br/>  <span class="text-medBlue"> for college startup</span><br /> success.
+  <section id="intro" class=" h-[100vh] w-full overflow-hidden flex flex-row justify-between ">
+
+    <div class="w-1/2 space-y-4  ">
+      <div class="container pt-22   max-w-md ml-16  text-white  text-5xl  font-[800] mt-40" id="intro-text">
+        Fueling the college startup revolution
       </div>
-      <div class=" bg-[#0d37a1] ml-[100px] mt-8  w-[130px] h-[50px] button-container">
-        <button class=" text-white font-body  text-[16px]    w-full h-[45px] " id="button-apply">Apply</button>
+      <div class="container pt-4  leading-slug max-w-md ml-16  text-medBlue  text-3xl  font-bold ">
+        Your one-stop destination for growth and success.
+
+      </div>
+      <div class="max-w-sm text-white font-light ml-16">
+        <p>We supports college entrepreneurs
+          through mentorship, a cohort program and campus representation.</p>
+      </div>
+      <div>
+        <a href="./pages/about.html"> <button
+            class="text-white bg-[#0C6980] rounded-md py-2 px-8 mt-4 text-[16px] hover:bg-[#084352] ml-16  ">Learn
+            More </button></a>
       </div>
     </div>
-    <div class="w-1/2  ">
-      <video src="img/homepage.mp4" class="border-none w-64 mx-auto" muted loop autoplay></video>
+    <div class="w-1/2 mt-16">
+      <img src="img/2.jpg" class="w-full" alt="">
     </div>
   </section>
 
-  <section id="about" class="h-[80vh]">
-    <div class="container mx-auto h-full  w-full  relative mb-24    ">
+  <section id="about" class="h-[80vh] bg-slate-100">
+    <div class="w-1/2">
+      <img src="img/about.png"class=" w-[300px]" alt="">
+    </div>
+    <!-- <div class="container mx-auto h-full  w-full  relative mb-24    ">
       <div class="w-40 h-40 bg-yellow-400 absolute top-6 "></div>
       <div class="h-36 w-auto absolute top-16 left-[80px]  px-4 ">
         <h1 class="text-5xl font-bold max-w-[200px] font-body ">Who Are We?</h1>
@@ -96,49 +109,47 @@
     
       
           <img src="../img/about-2.png" alt="" class="absolute -top-4 -right-6 w-[700px] h-[500px] object-cover">
-    </div>
-  </section>
+    </div> -->
+  </section> 
 
   <section id="service">
     <div class=" mx-auto h-[100vh] mb-16">
-      <!-- <div class="mx-auto"> -->
-      <!-- <h1 > Why Choose Us?</h1> -->
-      <div class="section-head">
-        <div class="text-center text-5xl font-bold text-lightBlue font-body mb-10">Why Choose Us?</div>
-        <!-- </div> -->
-        <div class="row1-container">
-          <div class="box box-down cyan">
-            <h2 class="text-center">Startup Funding for College Students</h2>
-            <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your
-              idea into a successful business. </p>
-            <img class="box-img" src="img/funding.png" alt="" >
-          </div>
+       <div class="mx-auto"> 
+  <div class="section-head">
+    <div class="text-center text-5xl font-bold text-darkBlue font-body mt-12 mb-10">Why Choose Us?</div>
+    <div class="row1-container">
+      <div class="box box-down cyan">
+        <h2 class="text-center">Startup Funding for College Students</h2>
+        <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your
+          idea into a successful business. </p>
+        <img class="box-img" src="img/funding.png" alt="">
+      </div>
 
-          <div class="box red">
-            <h2>Mentorship for College Startups</h2>
-            <p>Get expert guidance for your college startup. Our mentors have years of experience in various fields to
-              help you achieve success.
-            </p>
-            <img class="box-img" src="img/mentor.png" alt="">
-          </div>
+      <div class="box red">
+        <h2>Mentorship for College Startups</h2>
+        <p>Get expert guidance for your college startup. Our mentors have years of experience in various fields to
+          help you achieve success.
+        </p>
+        <img class="box-img" src="img/mentor.png" alt="">
+      </div>
 
-          <div class="box box-down blue">
-            <h2>Apply for Startup Funding</h2>
-            <p>Don't miss the chance to get the financial support you need to launch your college startup. Easy and
-              straightforward application process.</p>
-            <img class="box-img" src="img/apply.png" alt="">
-          </div>
-        </div>
-        <div class="row2-container">
-          <div class="box orange">
-            <h2>Team Builder</h2>
-            <p>Scans our talent network to create the optimal team for your project</p>
-            <img class="box-img" src="img/team.png" alt="">
-
-          </div>
-        </div>
+      <div class="box box-down blue">
+        <h2>Apply for Startup Funding</h2>
+        <p>Don't miss the chance to get the financial support you need to launch your college startup. Easy and
+          straightforward application process.</p>
+        <img class="box-img" src="img/apply.png" alt="">
+      </div>
+    </div>
+    <div class="row2-container">
+      <div class="box orange">
+        <h2>Team Builder</h2>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img class="box-img" src="img/team.png" alt="">
 
       </div>
+    </div>
+
+  </div>
   </section>
 
   <footer class="bg-gray-800 text-gray-100 py-2">
@@ -165,3 +176,20 @@
       </div>
     </div>
   </footer>
+
+<script>
+  var x=document.getElementById("navbar");
+  window.onscroll=function(){
+    if (document.body.scrollTop >= x.clientHeight||document.documentElement.scrollTop >= x.clientHeight ) {
+        x.classList.add("navbarColor");
+        // console.log("hello");
+        // x.remove("nav-transparent");
+      } 
+      else {
+        x.classList.remove("navbarColor");
+    }
+  }
+</script>
+</body>
+
+</html>
