--- a/pages/about.html
+++ b/pages/about.html
@@ -1,59 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us</title>
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us</title>
-  <link rel="stylesheet" href="../css/main.css" />
-</head>
+  <body>
+    <nav
+      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
+      id="navbar"
+    >
+      <div class="max-w-1/3">
+        <a href="../index.html">
+          <img src="../img/logo-new.png" class="w-[250px]" alt="" />
+        </a>
+      </div>
+      <div
+        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+      >
+        <a href="./about.html" class="link">About</a>
+        <a href="#" class="link">Resource</a>
+        <a href="./contact.html" class="link">Contact</a>
+        <a href="./faq.html" class="link">FAQ</a>
+      </div>
+      <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+  <span class="hamburger-top"></span>
+  <span class="hamburger-middle"></span>
+  <span class="hamburger-bottom"></span>
+</button> -->
+      <!-- </div> -->
 
-<body>
-  <nav
-    class="bg-white px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 border-b border-b-gray-200">
-    <div class="max-w-1/3">
-      <a href="../index.html">
-        <img src="../img/logo-new.png" class="w-[250px]" alt="">
-        
-      </a>
-    </div>
-    <div class="hidden container  font-regular flex-row items-center  justify-center space-x-10 md:flex max-w-1/3">
-      <a href="#" class="link  ">About</a>
-      <a href="./about.html" class="link  ">Resource</a>
-      <a href="#" class="link  ">For Student</a>
-      <a href="./pages/faq.html" class="link  ">FAQ</a>
-      <!-- <a href="#" class="hover:font-semibold ">Network</a> -->
-    </div>
-    <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-      <span class="hamburger-top"></span>
-      <span class="hamburger-middle"></span>
-      <span class="hamburger-bottom"></span>
-    </button> -->
-    </div>
+      <!-- <div class="md:hidden">
+  <div id="menu"
+    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+</div> -->
 
-    <!-- <div class="md:hidden">
-      <div id="menu"
-        class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-        <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-    </div> -->
+      <div
+        class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
+      >
+        <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
+        <button
+          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 p-2 md:py-2 md:px-4 md:text-sm"
+        >
+          Apply
+        </button>
+        <button
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+        >
+          Become a ambassador
+        </button>
+      </div>
+    </nav>
+    <section
+      class="flex flex-col items-center gap-8 py-10 md:flex-row md:gap-16 md:py-20"
+    >
+      <div
+        class="text-center w-full h-[50vh] mx-auto bg-[#cef5ee] flex flex-col items-center justify-center space-y-8"
+      >
+        <div class="w-[700px]">
+          <h2 class="font-bold text-[#f57456] text-[18px] pb-2">
+            ABOUT SEEDSNITCH
+          </h2>
+          <h2 class="text-5xl font-black text-[#242424]">
+            We are Supporting College Students in Launching Successful Business
+            Ventures
+          </h2>
+        </div>
+      </div>
+    </section>
+    <section class="gap-8 max-w-1/2 flex flex-row items-start">
+      <div class="space-y-2 w-1/2">
+        <h2 class="font-bold text-[#f57456] text-3xl text-center">
+          Our Mission
+        </h2>
+        <p class="text-sm text-[20px] md:text-md text-left p-4">
+          To provide comprehensive support to college students looking to launch
+          their own businesses by connecting them with mentors, funding, and
+          resources to turn their ideas into successful ventures.
+        </p>
+      </div>
+    </section>
+    <section class="gap-8 max-w-1/2 flex flex-row-reverse mt-4">
+      <div class="space-y-2 w-1/2">
+        <h2 class="font-bold text-[#f57456] text-3xl text-center">
+          Our Vision
+        </h2>
+        <p class="text-sm text-[20px] md:text-md p-4 text-left">
+          To create a strong community of college startup founders and to
+          empower the next generation of entrepreneurs to make their mark on the
+          world.
+        </p>
+      </div>
+    </section>
 
-    <div class="max-w-1/3  hidden items-center justify-end pr-4  font-semibold button-effect space-x-4 md:flex">
-      <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-      <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  text-white hover:bg-blue-400 bg-lightBlue  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
-        Apply Now
-      </button>
-      <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  border border-gray-500 hover:bg-medBlue hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
-        Become a partner
-      </button>
-    </div>
-  </nav>
-  
-
-</body>
-
+    <script>
+      var x = document.getElementById("navbar");
+      window.onscroll = function () {
+        if (
+          document.body.scrollTop >= x.clientHeight ||
+          document.documentElement.scrollTop >= x.clientHeight
+        ) {
+          x.classList.add("navbarColor");
+          // console.log("hello");
+          // x.remove("nav-transparent");
+        } else {
+          x.classList.remove("navbarColor");
+        }
+      };
+    </script>
+  </body>
 </html>
