--- a/pages/faq.html
+++ b/pages/faq.html
@@ -1,166 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FAQ</title>
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FAQ</title>
-  <link rel="stylesheet" href="../css/main.css" />
-</head>
+  <body>
+    <nav
+      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
+      id="navbar"
+    >
+      <div class="max-w-1/3">
+        <a href="../index.html">
+          <img src="../img/logo-new.png" class="w-[250px]" alt="" />
+        </a>
+      </div>
+      <div
+        class="hidden container ml-36 flex-row items-center justify-center space-x-8 md:flex max-w-1/3"
+      >
+        <a href="./about.html" class="link">About</a>
+        <a href="#" class="link">Resource</a>
+        <a href="./contact.html" class="link">Contact</a>
+        <a href="./faq.html" class="link">FAQ</a>
+      </div>
+      <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+  <span class="hamburger-top"></span>
+  <span class="hamburger-middle"></span>
+  <span class="hamburger-bottom"></span>
+</button> -->
+      <!-- </div> -->
 
-<body>
-  <nav
-    class="bg-white px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 border-b border-b-gray-200">
-    <div class="max-w-1/3">
-      <a href="../index.html">
-        <img src="../img/logo-new.png" class="w-[250px]" alt="">
-        
-      </a>
-    </div>
-    <div class="hidden container  font-regular flex-row items-center  justify-center space-x-10 md:flex max-w-1/3">
-      <a href="#" class="link  ">About</a>
-      <a href="./about.html" class="link  ">Resource</a>
-      <a href="#" class="link  ">For Student</a>
-      <a href="./pages/faq.html" class="link  ">FAQ</a>
-      <!-- <a href="#" class="hover:font-semibold ">Network</a> -->
-    </div>
-    <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-      <span class="hamburger-top"></span>
-      <span class="hamburger-middle"></span>
-      <span class="hamburger-bottom"></span>
-    </button> -->
-    </div>
+      <!-- <div class="md:hidden">
+  <div id="menu"
+    class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
+    <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
+    <a href="#" class="hover:text-darkGrayishBlue link">About</a>
+    <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
+</div> -->
 
-    <!-- <div class="md:hidden">
-      <div id="menu"
-        class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-        <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-        <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-    </div> -->
+      <div
+        class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
+      >
+        <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
+        <button
+          class="cursor-pointer border-textBlue border flex justify-center items-center font-medium rounded-md hover:bg-accent text-textBlue text-xs shrink-0 p-2 md:py-2 md:px-4 md:text-sm"
+        >
+          Apply
+        </button>
+        <button
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white border-gray-500 hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+        >
+          Become a ambassador
+        </button>
+      </div>
+    </nav>
 
-    <div class="max-w-1/3  hidden items-center justify-end pr-4  font-semibold button-effect space-x-4 md:flex">
-      <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-      <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  text-white hover:bg-blue-400 bg-lightBlue  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
-        Apply Now
-      </button>
-      <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  border border-gray-500 hover:bg-medBlue hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
-        Become a partner
-      </button>
-    </div>
-  </nav>
-  <section id="faq">
-    <div id="faq" class="faq-body">
-      <img
-        src="https://img.freepik.com/free-vector/tiny-people-sitting-standing-near-giant-faq_74855-7879.jpg?w=1060&t=st=1674060527~exp=1674061127~hmac=23c3fe8825c1eb6c894fa6e07a7640713277d33af8cadcac871f9063f5a8d570"
-        id="faq-image" alt="">
-      <!-- <div class="faq-header">
+    <section id="faq">
+      <div id="faq" class="faq-body">
+        <img
+          src="https://img.freepik.com/free-vector/tiny-people-sitting-standing-near-giant-faq_74855-7879.jpg?w=1060&t=st=1674060527~exp=1674061127~hmac=23c3fe8825c1eb6c894fa6e07a7640713277d33af8cadcac871f9063f5a8d570"
+          id="faq-image"
+          alt=""
+        />
+        <!-- <div class="faq-header">
           <h3 class="faq-title font-body">FAQ's</h3>
           <div class="seperator"></div>
         </div> -->
-      <div class="faq-list">
-        <div>
-          <details open>
-            <summary title="Is there a deadline to apply?">
-              Is there a deadline to apply?
-            </summary>
-            <p class="faq-content">
-              We do not have a specific deadline to apply, and we accept
-              applications throughout the year. This means that you can apply
-              at any time that is convenient for you.
-            </p>
-          </details>
-        </div>
-        <div>
-          <details>
-            <summary title="What are the eligibility criteria for applying?">
-              What are the eligibility criteria for applying?
-            </summary>
-            <p class="faq-content">
-              To apply, one must be a college student and have a startup idea.
-              This is the fundamental criterion by which we evaluate
-              applications. However, it's worth noting that the idea does not
-              need to be fully formed, it can be in the ideation stage as
-              well.
-            </p>
-          </details>
-        </div>
-        <div>
-          <details>
-            <summary title="    What's the selection ratio for the application?">
-              What's the selection ratio for the application?
-            </summary>
-            <p class="faq-content">
-              Our selection ratio is quite high, meaning that if we see that
-              all the ideas have potential, we are ready to fund all of them.
-              We believe in the power of good ideas, and we want to support as
-              many of them as possible.
-            </p>
-          </details>
-        </div>
-        <div>
-          <details>
-            <summary title="How much equity do you take on as the connecting platform?">
-              How much equity do you take on as the connecting platform?
-            </summary>
-            <p class="faq-content">
-              Yes, you can still apply even if you are in the ideation stage
-              and don't have a product yet. We understand that not every idea
-              is fully formed at the time of application and that's okay. We
-              are here to support you and help you bring your idea to life.
-            </p>
-          </details>
-        </div>
-        <div>
-          <details>
-            <summary title="How much equity do you take on as the connecting platform?">
-              How much equity do you take on as the connecting platform?
-            </summary>
-            <p class="faq-content">
-              As a platform, we take 1 percent equity on getting you connected
-              with an investor and helping you getting the funding secured.
-              This is our way of making sure that we have a vested interest in
-              the success of your startup.
-            </p>
-          </details>
-        </div>
-        <div>
-          <details>
-            <summary title="What is the cohort program run by Seedsnitch, and do you take any cohort fees?
-                  ">
-              What is the cohort program run by Seedsnitch, and do you take
-              any cohort fees?
-            </summary>
-            <p class="faq-content">
-              The cohort program is offered 2-3 times per year and is
-              completely free to participants. All the selected applications
-              are part of the cohort. We believe that providing free resources
-              and support is the best way to help founders succeed.
-            </p>
-          </details>
-        </div>
-        <div>
-          <details>
-              <summary title="I have no background in running a business. Will that affect my application for shortlisting? 
-                  ">
-                  Will lack of business experience affect my application shortlisting?
+        <div class="faq-list">
+          <div>
+            <details open>
+              <summary title="Is there a deadline to apply?">
+                Is there a deadline to apply?
               </summary>
-            <p class="faq-content">
-              No, having no background in running a business will not affect
-              your application for shortlisting. We believe that the passion
-              and drive to start a business are more important than any degree
-              or business background. Every application is treated equally,
-              and we take all factors into consideration when evaluating them.
-            </p>
-          </details>
+              <p class="faq-content">
+                We do not have a specific deadline to apply, and we accept
+                applications throughout the year. This means that you can apply
+                at any time that is convenient for you.
+              </p>
+            </details>
+          </div>
+          <div>
+            <details>
+              <summary title="What are the eligibility criteria for applying?">
+                What are the eligibility criteria for applying?
+              </summary>
+              <p class="faq-content">
+                To apply, one must be a college student and have a startup idea.
+                This is the fundamental criterion by which we evaluate
+                applications. However, it's worth noting that the idea does not
+                need to be fully formed, it can be in the ideation stage as
+                well.
+              </p>
+            </details>
+          </div>
+          <div>
+            <details>
+              <summary
+                title="    What's the selection ratio for the application?"
+              >
+                What's the selection ratio for the application?
+              </summary>
+              <p class="faq-content">
+                Our selection ratio is quite high, meaning that if we see that
+                all the ideas have potential, we are ready to fund all of them.
+                We believe in the power of good ideas, and we want to support as
+                many of them as possible.
+              </p>
+            </details>
+          </div>
+          <div>
+            <details>
+              <summary
+                title="How much equity do you take on as the connecting platform?"
+              >
+                How much equity do you take on as the connecting platform?
+              </summary>
+              <p class="faq-content">
+                Yes, you can still apply even if you are in the ideation stage
+                and don't have a product yet. We understand that not every idea
+                is fully formed at the time of application and that's okay. We
+                are here to support you and help you bring your idea to life.
+              </p>
+            </details>
+          </div>
+          <div>
+            <details>
+              <summary
+                title="How much equity do you take on as the connecting platform?"
+              >
+                How much equity do you take on as the connecting platform?
+              </summary>
+              <p class="faq-content">
+                As a platform, we take 1 percent equity on getting you connected
+                with an investor and helping you getting the funding secured.
+                This is our way of making sure that we have a vested interest in
+                the success of your startup.
+              </p>
+            </details>
+          </div>
+          <div>
+            <details>
+              <summary
+                title="What is the cohort program run by Seedsnitch, and do you take any cohort fees?
+                  "
+              >
+                What is the cohort program run by Seedsnitch, and do you take
+                any cohort fees?
+              </summary>
+              <p class="faq-content">
+                The cohort program is offered 2-3 times per year and is
+                completely free to participants. All the selected applications
+                are part of the cohort. We believe that providing free resources
+                and support is the best way to help founders succeed.
+              </p>
+            </details>
+          </div>
+          <div>
+            <details>
+              <summary
+                title="I have no background in running a business. Will that affect my application for shortlisting? 
+                  "
+              >
+                Will lack of business experience affect my application
+                shortlisting?
+              </summary>
+              <p class="faq-content">
+                No, having no background in running a business will not affect
+                your application for shortlisting. We believe that the passion
+                and drive to start a business are more important than any degree
+                or business background. Every application is treated equally,
+                and we take all factors into consideration when evaluating them.
+              </p>
+            </details>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-
-</body>
-
+    </section>
+    <script>
+      var x = document.getElementById("navbar");
+      window.onscroll = function () {
+        if (
+          document.body.scrollTop >= x.clientHeight ||
+          document.documentElement.scrollTop >= x.clientHeight
+        ) {
+          x.classList.add("navbarColor");
+          // console.log("hello");
+          // x.remove("nav-transparent");
+        } else {
+          x.classList.remove("navbarColor");
+        }
+      };
+    </script>
+  </body>
 </html>
