--- a/pages/apply.html
+++ b/pages/apply.html
@@ -123,13 +123,13 @@
         class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 md:pt-10"
       >
         <div
-          class="w-full md:w-[800px] h-auto rounded-md mx-auto md:form border-t border-t-gray-100 px-2 bg-white"
+          class="w-full md:w-[800px] h-auto rounded-md mx-auto border-t border-t-gray-100 px-2 bg-white"
         >
           <form
-            class="w-full h-full px-4 pt-6 pb-3 md:flex items-start justify-between bg-white"
+            class="w-full h-full px-8 pt-6 pb-3 md:flex md:items-start md:justify-between bg-white justify-center"
           >
             <div
-              class="w-full md:w-1/2 flex flex-col items-start justify-start"
+              class="w-full md:w-1/2 flex flex-col md:items-start md:justify-start items-center"
             >
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full px-3">
@@ -254,7 +254,7 @@
             </div>
             <!-- <hr class="mb-6" /> -->
             <div
-              class="w-full md:w-1/2 flex flex-col items-start justify-start"
+              class="w-full md:w-1/2 flex flex-col md:items-start md:justify-start items-center"
             >
               <div class="w-full flex flex-wrap -mx-3 mb-2">
                 <div class="w-full md:w-full mb-6 md:mb-0 px-3">
